Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -194,6 +194,37 @@ EXPORTING i_parent = go_cont_r.
 ```
 </br>
 </br>
+</br>
+
+---
+
+</br>
+
+## < ABAP 프로그램·트랜잭션 호출 방식 정리 >
+- 다른 프로그램 실행만 하고 자동으로 돌아오지 않음
+```abap
+SUBMIT prog_name_2.
+```
+- 다른 프로그램 실행 후 끝나면 원래 프로그램으로 돌아옴
+```abap
+SUBMIT prog_name_2 AND RETURN.
+```
+- 실행 전 조회조건 화면을 보여주고, 끝나면 원래 프로그램으로 돌아옴
+```abap
+SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
+```
+- 현재 프로그램 종료 후 트랜잭션으로 이동 (복귀 ❌)
+```abap
+LEAVE TO TRANSACTION 'T_CODE'
+```
+- 트랜잭션 실행 후 종료 시 원래 프로그램으로 복귀 ⭕
+```abap
+CALL TRANSACTION 'T_CODE'
+```
+
+</br>
+</br>
+</br>
 
 ---
 
