--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -551,3 +551,16 @@ MODULE init_alv OUTPUT.
   ENDIF.
 ENDMODULE.
 ```
+</br>
+
+**6) 결과 확인**
+
+- 더블클릭 시 창 띄어잠
+<img width="535" height="240" alt="image" src="https://github.com/user-attachments/assets/0faf79a3-c470-4a4f-9e7a-d27efd122f58" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
