Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -555,7 +555,7 @@ ENDMODULE.
 
 **6) 결과 확인**
 
-- 더블클릭 시 창 띄어잠
+- 더블클릭 시 데이터 출력
 <img width="535" height="240" alt="image" src="https://github.com/user-attachments/assets/0faf79a3-c470-4a4f-9e7a-d27efd122f58" />
 
 </br>
