Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -214,6 +214,56 @@ SUBMIT prog_name_2 AND RETURN.
 SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
 ```
 </br>
+
+- `SUBMIT ZPROGB03_CALLED.` → ZPROGB03_CALLED만 실행되고 “CALL 프로그램으로 돌아왔어요!”는 안 찍힘
+- `SUBMIT ZPROGB03_CALLED AND RETURN.` → ZPROGB03_CALLED 실행 후 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
+- `SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.` → ZPROGB03_CALLED의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
+```abap
+REPORT ZPROGB03_CALL.
+
+DATA: gt_sflight TYPE TABLE OF sflight,
+      gs_sflight LIKE LINE OF gt_sflight.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+START-OF-SELECTION.
+
+*SUBMIT ZPROGB03_CALLED.
+*SUBMIT ZPROGB03_CALLED AND RETURN.
+SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.
+
+WRITE: 'CALL 프로그램으로 돌아왔어요!'.
+```
+```abap
+REPORT ZPROGB03_CALLED.
+
+DATA: gt_sflight TYPE TABLE OF sflight,
+      gs_sflight LIKE LINE OF gt_sflight.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+START-OF-SELECTION.
+SELECT * FROM sflight
+  INTO TABLE gt_sflight
+  WHERE carrid = pa_car
+    AND connid IN so_con.
+
+IF sy-subrc = 0.
+  LOOP AT gt_sflight INTO gs_sflight.
+    WRITE:/ gs_sflight-carrid,
+            gs_sflight-connid,
+            gs_sflight-fldate,
+            gs_sflight-seatsmax,
+            gs_sflight-seatsocc.
+    CLEAR: gs_sflight.
+  ENDLOOP.
+ELSE.
+  WRITE:/ 'No data'.
+ENDIF.
+```
+</br>
 </br>
 
 ## < 트랜잭션 호출 방식 >
