Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -216,11 +216,14 @@ SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
 </br>
 
 - `SUBMIT ZPROGB03_CALLED.`
-  - → ZPROGB03_CALLED만 실행되고 “CALL 프로그램으로 돌아왔어요!”는 안 찍힘
+
+  - ZPROGB03_CALLED만 실행되고 “CALL 프로그램으로 돌아왔어요!”는 안 찍힘
 - `SUBMIT ZPROGB03_CALLED AND RETURN.`
-  - → ZPROGB03_CALLED 실행 후 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
+
+  - ZPROGB03_CALLED 실행 후 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
 - `SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.`
-   → ZPROGB03_CALLED의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
+
+  - ZPROGB03_CALLED의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
 ```abap
 REPORT ZPROGB03_CALL.
 
