Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -200,7 +200,10 @@ EXPORTING i_parent = go_cont_r.
 
 </br>
 
-## < SUBMIT 호출 방식 >
+## < ABAP 프로그램·트랜잭션 호출 방식 정리 >
+</br>
+
+### 1) SUBMIT 호출 방식
 - 다른 프로그램 실행만 하고 자동으로 돌아오지 않음
 ```abap
 SUBMIT prog_name_2.
@@ -272,7 +275,7 @@ ENDIF.
 </br>
 </br>
 
-## < 트랜잭션 호출 방식 >
+### 2) 트랜잭션 호출 방식
 - 현재 프로그램 종료 후 트랜잭션으로 이동 (복귀 ❌)
 ```abap
 LEAVE TO TRANSACTION 'T_CODE'
