Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -259,16 +259,7 @@ SELECT * FROM sflight
   WHERE carrid = pa_car
     AND connid IN so_con.
 
-IF sy-subrc = 0.
-  LOOP AT gt_sflight INTO gs_sflight.
-    WRITE:/ gs_sflight-carrid,
-            gs_sflight-connid,
-            gs_sflight-fldate,
-            gs_sflight-seatsmax,
-            gs_sflight-seatsocc.
-    CLEAR: gs_sflight.
-  ENDLOOP.
-ELSE.
+IF sy-subrc <> 0.
   WRITE:/ 'No data'.
 ENDIF.
 ```
