Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -230,8 +230,8 @@ SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
   - → `call` - 조회조건 화면
   - → `called` - 'No data' 출력
   - → `called` - 뒤로가기하면 조회조건 화면 출력
-  - → `call` - 'CALL 프로그램으로 돌아왔어요!' 출력
-  - →  `call` - 조회조건 화면으로 돌아옴
+  - → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
+  - →  `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
   - → 뒤로가기하면 프로그램 종료
 - `SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.`
 
@@ -240,8 +240,8 @@ SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
   - → `called` - 조회조건 화면 출력
   - → `called` - 'No data' 출력
   - → `called` - 뒤로가기하면 조회조건 화면 출력
-  - → `call` - 'CALL 프로그램으로 돌아왔어요!' 출력
-  - → `call` - 조회조건 화면으로 돌아옴
+  - → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
+  - → `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
   - → 뒤로가기하면 프로그램 종료
 ```abap
 REPORT ZPROGB03_CALL.
