--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -218,13 +218,13 @@ SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
 ```
 </br>
 
-- `SUBMIT ZPROGB03_CALLED.`
+- **SUBMIT ZPROGB03_CALLED.**
 
   - `ZPROGB03_CALLED` 만 실행되고 “CALL 프로그램으로 돌아왔어요!”는 안 찍힘
   - → `call` - 조회조건 화면
   - → `called` - 'No data' 출력
   - → 뒤로가기하면 프로그램 종료
-- `SUBMIT ZPROGB03_CALLED AND RETURN.`
+- **SUBMIT ZPROGB03_CALLED AND RETURN.**
 
   - `PROGB03_CALLED` 실행 후 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
   - → `call` - 조회조건 화면
@@ -233,7 +233,7 @@ SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
   - → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
   - →  `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
   - → 뒤로가기하면 프로그램 종료
-- `SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.`
+- **SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.**
 
   - `ZPROGB03_CALLED` 의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
   - → `call` - 조회조건 화면
@@ -245,9 +245,6 @@ SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
   - → 뒤로가기하면 프로그램 종료
 ```abap
 REPORT ZPROGB03_CALL.
-
-DATA: gt_sflight TYPE TABLE OF sflight,
-      gs_sflight LIKE LINE OF gt_sflight.
 
 PARAMETERS: pa_car TYPE s_carr_id.
 SELECT-OPTIONS: so_con FOR gs_sflight-connid.
@@ -290,6 +287,55 @@ LEAVE TO TRANSACTION 'T_CODE'
 - 트랜잭션 실행 후 종료 시 원래 프로그램으로 복귀 ⭕
 ```abap
 CALL TRANSACTION 'T_CODE'
+```
+</br>
+
+```abap
+REPORT ZPROGB03_CALL.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
+  SELECTION-SCREEN BEGIN OF LINE.
+    SELECTION-SCREEN COMMENT pos_low(20) TEXT-001 FOR FIELD pa_rad1.
+    PARAMETERS: pa_rad1 RADIOBUTTON GROUP RAD.
+    SELECTION-SCREEN COMMENT pos_high(20) TEXT-002 FOR FIELD pa_rad2.
+    PARAMETERS: pa_rad2 RADIOBUTTON GROUP RAD DEFAULT 'X'.
+  SELECTION-SCREEN END OF LINE.
+SELECTION-SCREEN END OF BLOCK blk1.
+
+START-OF-SELECTION.
+CASE 'X'.
+  WHEN pa_rad1.
+*    LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'
+    LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'
+    AND SKIP FIRST SCREEN.
+  WHEN pa_rad2.
+    CALL TRANSACTION 'ZTCODEB03_CALLED'.
+  WHEN OTHERS.
+ENDCASE.
+
+WRITE: 'CALL 프로그램으로 돌아왔어요!'.
+```
+```abap
+REPORT ZPROGB03_CALLED.
+
+DATA: gt_sflight TYPE TABLE OF sflight,
+      gs_sflight LIKE LINE OF gt_sflight.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+START-OF-SELECTION.
+SELECT * FROM sflight
+  INTO TABLE gt_sflight
+  WHERE carrid = pa_car
+    AND connid IN so_con.
+
+IF sy-subrc <> 0.
+  WRITE:/ 'No data'.
+ENDIF.
 ```
 </br>
 </br>
