--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -284,12 +284,44 @@ ENDIF.
 ```abap
 LEAVE TO TRANSACTION 'T_CODE'
 ```
+```abap
+LEAVE TO TRANSACTION 'T_CODE' AND SKIP FIRST SCREEN
+```
 - 트랜잭션 실행 후 종료 시 원래 프로그램으로 복귀 ⭕
 ```abap
 CALL TRANSACTION 'T_CODE'
 ```
 </br>
 
+- **LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'**
+
+  - ZTCODEB03_CALLED로 넘어가서 실행되고 CALL 프로그램으로 돌아오지 않아 "CALL 프로그램으로 돌아왔어요!"는 안 찍힘
+  - → `call` - 조회조건 화면
+  - → `called` - 조회조건 화면 출력
+  - → `called` - 'No data' 출력
+  - → `called` - 뒤로가기하면 조회조건 화면 출력
+  - → 뒤로가기하면 프로그램 종료
+
+- **LEAVE TO TRANSACTION 'ZTCODEB03_CALLED' AND SKIP FIRST SCREEN**
+
+  - ZTCODEB03_CALLED를 조회조건 화면 없이 바로 실행하고, CALL 프로그램으로 돌아오지 않음
+  - → `call` - 조회조건 화면
+  - → `called` - 조회조건 화면 출력
+  - → `called` - 'No data' 출력
+  - → `called` - 뒤로가기하면 조회조건 화면 출력
+  - → `called` - 뒤로가기하면 'No data' 출력
+  - → 뒤로가기하면 프로그램 종료
+    
+- **CALL TRANSACTION 'ZTCODEB03_CALLED'**
+
+  - ZTCODEB03_CALLED를 실행한 뒤 돌아와서 "CALL 프로그램으로 돌아왔어요!"가 찍힘
+  - → `call` - 조회조건 화면
+  - → `called` - 조회조건 화면 출력
+  - → `called` - 'No data' 출력
+  - → `called` - 뒤로가기하면 조회조건 화면 출력
+  - → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
+  - → `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
+  - → 뒤로가기하면 프로그램 종료
 ```abap
 REPORT ZPROGB03_CALL.
 
