Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -284,6 +284,7 @@ ENDIF.
 ```abap
 LEAVE TO TRANSACTION 'T_CODE'
 ```
+- 트랜잭션의 첫 화면을 건너뛰고 바로 실행
 ```abap
 LEAVE TO TRANSACTION 'T_CODE' AND SKIP FIRST SCREEN
 ```
