Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -218,31 +218,31 @@ SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
 ```
 </br>
 
-- **SUBMIT ZPROGB03_CALLED.**
+**1) SUBMIT ZPROGB03_CALLED.**
 
-  - `ZPROGB03_CALLED` 만 실행되고 “CALL 프로그램으로 돌아왔어요!”는 안 찍힘
-  - → `call` - 조회조건 화면
-  - → `called` - 'No data' 출력
-  - → 뒤로가기하면 프로그램 종료
-- **SUBMIT ZPROGB03_CALLED AND RETURN.**
+- `ZPROGB03_CALLED` 만 실행되고 “CALL 프로그램으로 돌아왔어요!”는 안 찍힘
+- → `call` - 조회조건 화면
+- → `called` - 'No data' 출력
+- → 뒤로가기하면 프로그램 종료
+2) **SUBMIT ZPROGB03_CALLED AND RETURN.**
 
-  - `PROGB03_CALLED` 실행 후 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
-  - → `call` - 조회조건 화면
-  - → `called` - 'No data' 출력
-  - → `called` - 뒤로가기하면 조회조건 화면 출력
-  - → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
-  - →  `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
-  - → 뒤로가기하면 프로그램 종료
-- **SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.**
+- `PROGB03_CALLED` 실행 후 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
+- → `call` - 조회조건 화면
+- → `called` - 'No data' 출력
+- → `called` - 뒤로가기하면 조회조건 화면 출력
+- → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
+- →  `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
+- → 뒤로가기하면 프로그램 종료
+**3) SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.**
 
-  - `ZPROGB03_CALLED` 의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
-  - → `call` - 조회조건 화면
-  - → `called` - 조회조건 화면 출력
-  - → `called` - 'No data' 출력
-  - → `called` - 뒤로가기하면 조회조건 화면 출력
-  - → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
-  - → `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
-  - → 뒤로가기하면 프로그램 종료
+- `ZPROGB03_CALLED` 의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
+- → `call` - 조회조건 화면
+- → `called` - 조회조건 화면 출력
+- → `called` - 'No data' 출력
+- → `called` - 뒤로가기하면 조회조건 화면 출력
+- → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
+- → `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
+- → 뒤로가기하면 프로그램 종료
 ```abap
 REPORT ZPROGB03_CALL.
 
@@ -294,32 +294,32 @@ CALL TRANSACTION 'T_CODE'
 ```
 </br>
 
-- **LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'**
+**1) LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'**
 
-  - ZTCODEB03_CALLED로 넘어가서 실행되고 CALL 프로그램으로 돌아오지 않아 "CALL 프로그램으로 돌아왔어요!"는 안 찍힘
-  - → `call` - 조회조건 화면
-  - → `called` - 조회조건 화면 출력
-  - → `called` - 'No data' 출력
-  - → `called` - 뒤로가기하면 조회조건 화면 출력
-  - → 뒤로가기하면 프로그램 종료
+- ZTCODEB03_CALLED로 넘어가서 실행되고 CALL 프로그램으로 돌아오지 않아 "CALL 프로그램으로 돌아왔어요!"는 안 찍힘
+- → `call` - 조회조건 화면
+- → `called` - 조회조건 화면 출력
+- → `called` - 'No data' 출력
+- → `called` - 뒤로가기하면 조회조건 화면 출력
+- → 뒤로가기하면 프로그램 종료
 
-- **LEAVE TO TRANSACTION 'ZTCODEB03_CALLED' AND SKIP FIRST SCREEN**
+**2) LEAVE TO TRANSACTION 'ZTCODEB03_CALLED' AND SKIP FIRST SCREEN**
 
-  - ZTCODEB03_CALLED를 조회조건 화면 없이 바로 실행하고, CALL 프로그램으로 돌아오지 않음
-  - → `call` - 조회조건 화면
-  - → `called` - 'No data' 출력
-  - → 뒤로가기하면 프로그램 종료
-    
-- **CALL TRANSACTION 'ZTCODEB03_CALLED'**
+- ZTCODEB03_CALLED를 조회조건 화면 없이 바로 실행하고, CALL 프로그램으로 돌아오지 않음
+- → `call` - 조회조건 화면
+- → `called` - 'No data' 출력
+- → 뒤로가기하면 프로그램 종료
 
-  - ZTCODEB03_CALLED를 실행한 뒤 돌아와서 "CALL 프로그램으로 돌아왔어요!"가 찍힘
-  - → `call` - 조회조건 화면
-  - → `called` - 조회조건 화면 출력
-  - → `called` - 'No data' 출력
-  - → `called` - 뒤로가기하면 조회조건 화면 출력
-  - → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
-  - → `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
-  - → 뒤로가기하면 프로그램 종료
+**3) CALL TRANSACTION 'ZTCODEB03_CALLED'**
+
+- ZTCODEB03_CALLED를 실행한 뒤 돌아와서 "CALL 프로그램으로 돌아왔어요!"가 찍힘
+- → `call` - 조회조건 화면
+- → `called` - 조회조건 화면 출력
+- → `called` - 'No data' 출력
+- → `called` - 뒤로가기하면 조회조건 화면 출력
+- → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
+- → `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
+- → 뒤로가기하면 프로그램 종료
 ```abap
 REPORT ZPROGB03_CALL.
 
