Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -216,6 +216,14 @@ SUBMIT prog_name_2 AND RETURN.
 ```abap
 SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
 ```
+- 앞 프로그램에서 입력한 값을 다음 프로그램으로 그대로 넘길 때 사용
+```abap
+SUBMIT <CALLED_PROGRAM>
+  VIA SELECTION-SCREEN AND RETURN
+  WITH <CALLED_PARM> = <CALL_PARM>
+  WITH <CALLED_SO>   IN <CALL_SO>.
+```
+</br>
 </br>
 
 **1) SUBMIT ZPROGB03_CALLED.**
@@ -295,6 +303,7 @@ LEAVE TO TRANSACTION 'T_CODE' AND SKIP FIRST SCREEN
 ```abap
 CALL TRANSACTION 'T_CODE'
 ```
+</br>
 </br>
 
 **1) LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'**
