Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -233,6 +233,7 @@ SUBMIT <CALLED_PROGRAM>
   - → `call` - 조회조건 화면
   - → `called` - 'No data' 출력
   - → 뒤로가기하면 프로그램 종료
+    
 2) **SUBMIT ZPROGB03_CALLED AND RETURN.**
 
 - `PROGB03_CALLED` 실행 후 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
@@ -243,6 +244,7 @@ SUBMIT <CALLED_PROGRAM>
   - → `call` - 뒤로가기하면 'CALL 프로그램으로 돌아왔어요!' 출력
   - → `call` - 뒤로가기하면 조회조건 화면으로 돌아옴
   - → 뒤로가기하면 프로그램 종료
+    
 **3) SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.**
 
 - `ZPROGB03_CALLED` 의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
@@ -262,9 +264,18 @@ SELECT-OPTIONS: so_con FOR gs_sflight-connid.
 
 START-OF-SELECTION.
 
+SUBMIT ZPROGB03_CALLED
+VIA SELECTION-SCREEN
+AND RETURN
+WITH pa_car2 = pa_car
+WITH so_con2 IN so_con.
+SUBMIT ZPROGB03_CALLED.
+SUBMIT ZPROGB03_CALLED AND RETURN.
+SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.
+
 *SUBMIT ZPROGB03_CALLED.
 *SUBMIT ZPROGB03_CALLED AND RETURN.
-SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.
+*SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.
 
 WRITE: 'CALL 프로그램으로 돌아왔어요!'.
 ```
@@ -283,7 +294,16 @@ SELECT * FROM sflight
   WHERE carrid = pa_car
     AND connid IN so_con.
 
-IF sy-subrc <> 0.
+IF sy-subrc = 0.
+  LOOP AT gt_sflight INTO gs_sflight.
+    WRITE:/ gs_sflight-carrid,
+            gs_sflight-connid,
+            gs_sflight-fldate,
+            gs_sflight-seatsmax,
+            gs_sflight-seatsocc.
+    CLEAR: gs_sflight.
+  ENDLOOP.
+ELSE.
   WRITE:/ 'No data'.
 ENDIF.
 ```
