--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -204,6 +204,9 @@ EXPORTING i_parent = go_cont_r.
 </br>
 
 ### 1) SUBMIT 호출 방식
+- 다른 프로그램을 잠깐 실행했다가 돌아오는 방식 → 같은 메모리(ABAP Memory) 그대로 사용
+</br>
+
 - 다른 프로그램 실행만 하고 자동으로 돌아오지 않음
 ```abap
 SUBMIT prog_name_2.
@@ -312,6 +315,7 @@ ENDIF.
 
 ### 2) 트랜잭션 호출 방식
 - 현재 프로그램 종료 후 트랜잭션으로 이동 (복귀 ❌)
+- 지금 프로그램을 완전히 종료하고 이동 → 메모리 다 초기화됨(SAP Memory만 가능)
 ```abap
 LEAVE TO TRANSACTION 'T_CODE'
 ```
@@ -320,6 +324,7 @@ LEAVE TO TRANSACTION 'T_CODE'
 LEAVE TO TRANSACTION 'T_CODE' AND SKIP FIRST SCREEN
 ```
 - 트랜잭션 실행 후 종료 시 원래 프로그램으로 복귀 ⭕
+- 트랜잭션 화면을 열었다가 끝나면 돌아옴 → 메모리 유지됨
 ```abap
 CALL TRANSACTION 'T_CODE'
 ```
