Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -219,13 +219,6 @@ SUBMIT prog_name_2 AND RETURN.
 ```abap
 SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
 ```
-- 앞 프로그램에서 입력한 값을 다음 프로그램으로 그대로 넘길 때 사용
-```abap
-SUBMIT <CALLED_PROGRAM>
-  VIA SELECTION-SCREEN AND RETURN
-  WITH <CALLED_PARM> = <CALL_PARM>
-  WITH <CALLED_SO>   IN <CALL_SO>.
-```
 </br>
 </br>
 
@@ -273,25 +266,9 @@ DATA: gt_sflight TYPE TABLE OF sflight,
 PARAMETERS: pa_car TYPE s_carr_id.
 SELECT-OPTIONS: so_con FOR gs_sflight-connid.
 
-START-OF-SELECTION.
-SELECT * FROM sflight
-  INTO TABLE gt_sflight
-  WHERE carrid = pa_car
-    AND connid IN so_con.
-
-IF sy-subrc = 0.
-  LOOP AT gt_sflight INTO gs_sflight.
-    WRITE:/ gs_sflight-carrid,
-            gs_sflight-connid,
-            gs_sflight-fldate,
-            gs_sflight-seatsmax,
-            gs_sflight-seatsocc.
-    CLEAR: gs_sflight.
-  ENDLOOP.
-ELSE.
-  WRITE:/ 'No data'.
-ENDIF.
+WRITE:/ 'No data'.
 ```
+</br>
 </br>
 </br>
 
@@ -362,15 +339,19 @@ DATA: gt_sflight TYPE TABLE OF sflight,
 PARAMETERS: pa_car TYPE s_carr_id.
 SELECT-OPTIONS: so_con FOR gs_sflight-connid.
 
-START-OF-SELECTION.
-SELECT * FROM sflight
-  INTO TABLE gt_sflight
-  WHERE carrid = pa_car
-    AND connid IN so_con.
+WRITE:/ 'No data'.
+```
+</br>
+</br>
+</br>
 
-IF sy-subrc <> 0.
-  WRITE:/ 'No data'.
-ENDIF.
+### 3) 프로그램 간 데이터 전달
+- 앞 프로그램에서 입력한 값을 다음 프로그램으로 그대로 넘길 때 사용
+```abap
+SUBMIT <CALLED_PROGRAM>
+  VIA SELECTION-SCREEN AND RETURN
+  WITH <CALLED_PARM> = <CALL_PARM>
+  WITH <CALLED_SO>   IN <CALL_SO>.
 ```
 </br>
 </br>
