Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -235,6 +235,7 @@ SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
 - `ZPROGB03_CALLED` 의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
 
 ```abap
+*************** CALL ****************
 REPORT ZPROGB03_CALL.
 
 PARAMETERS: pa_car TYPE s_carr_id.
@@ -256,17 +257,25 @@ SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.
 *SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.
 
 WRITE: 'CALL 프로그램으로 돌아왔어요!'.
-```
-```abap
-REPORT ZPROGB03_CALLED.
 
-DATA: gt_sflight TYPE TABLE OF sflight,
-      gs_sflight LIKE LINE OF gt_sflight.
+*************** CALLED ****************
+REPORT ZPROGB03_CALLED.
 
 PARAMETERS: pa_car TYPE s_carr_id.
 SELECT-OPTIONS: so_con FOR gs_sflight-connid.
 
-WRITE:/ 'No data'.
+IF sy-subrc = 0.
+  LOOP AT gt_sflight INTO gs_sflight.
+    WRITE:/ gs_sflight-carrid,
+            gs_sflight-connid,
+            gs_sflight-fldate,
+            gs_sflight-seatsmax,
+            gs_sflight-seatsocc.
+    CLEAR: gs_sflight.
+  ENDLOOP.
+ELSE.
+  WRITE:/ 'No data'.
+ENDIF.
 ```
 </br>
 </br>
@@ -303,6 +312,7 @@ CALL TRANSACTION 'T_CODE'
 - ZTCODEB03_CALLED를 실행한 뒤 돌아와서 "CALL 프로그램으로 돌아왔어요!"가 찍힘
 
 ```abap
+*************** CALL ****************
 REPORT ZPROGB03_CALL.
 
 PARAMETERS: pa_car TYPE s_carr_id.
@@ -330,17 +340,6 @@ ENDCASE.
 
 WRITE: 'CALL 프로그램으로 돌아왔어요!'.
 ```
-```abap
-REPORT ZPROGB03_CALLED.
-
-DATA: gt_sflight TYPE TABLE OF sflight,
-      gs_sflight LIKE LINE OF gt_sflight.
-
-PARAMETERS: pa_car TYPE s_carr_id.
-SELECT-OPTIONS: so_con FOR gs_sflight-connid.
-
-WRITE:/ 'No data'.
-```
 </br>
 </br>
 </br>
@@ -352,6 +351,23 @@ SUBMIT <CALLED_PROGRAM>
   VIA SELECTION-SCREEN AND RETURN
   WITH <CALLED_PARM> = <CALL_PARM>
   WITH <CALLED_SO>   IN <CALL_SO>.
+```
+```abap
+*************** CALL ****************
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+START-OF-SELECTION.
+
+SUBMIT ZPROGB03_CALLED
+VIA SELECTION-SCREEN
+AND RETURN
+WITH pa_car2 = pa_car
+WITH so_con2 IN so_con.
+
+*************** CALLED ****************
+PARAMETERS: pa_car2 TYPE s_carr_id.
+SELECT-OPTIONS: so_con2 FOR gs_sflight-connid.
 ```
 </br>
 </br>
