Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -369,6 +369,45 @@ WITH so_con2 IN so_con.
 PARAMETERS: pa_car2 TYPE s_carr_id.
 SELECT-OPTIONS: so_con2 FOR gs_sflight-connid.
 ```
+
+</br>
+</br>
+</br>
+
+### 4) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유
+- 프로그램을 이동해도 이전에 입력한 값을 다시 쓰기 위해 ABAP Memory를 사용함
+```abap
+" ABAP Memory에 값 저장
+EXPORT
+  <MEM_PARM> FROM <CALL_PARM>
+  <MEM_SO>   FROM <CALL_SO>
+  TO MEMORY ID '<MEMORY_ID>'.
+
+" ABAP Memory에서 값 불러오기
+IMPORT
+  <MEM_PARM> TO <CALLED_PARM>
+  <MEM_SO>   TO <CALLED_SO>
+  FROM MEMORY ID '<MEMORY_ID>'.
+```
+```abap
+*************** CALL ****************
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+EXPORT
+  p1 FROM pa_car
+  s1 FROM so_con
+  TO MEMORY ID 'CARCON'.
+
+*************** CALLED ****************
+PARAMETERS: pa_car2 TYPE s_carr_id.
+SELECT-OPTIONS: so_con2 FOR gs_sflight-connid.
+
+IMPORT
+  p1 TO pa_car2
+  s1 TO so_con2
+  FROM MEMORY ID 'CARCON'.
+```
 </br>
 </br>
 </br>
