Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -412,6 +412,25 @@ IMPORT
 </br>
 </br>
 
+### 5) MEMORY ID를 이용한 조회조건 자동 유지
+- 한 번 입력한 조회조건을 SAP이 기억해두었다가, 다음 실행 때 자동으로 다시 채워줌
+```abap
+PARAMETERS: <PARAM> TYPE <TYPE> MEMORY ID '<MEM_ID>'.
+SELECT-OPTIONS: <SO> FOR <FIELD> MEMORY ID '<MEM_ID>'.
+```
+```abap
+*************** CALL ****************
+PARAMETERS: pa_car TYPE s_carr_id MEMORY ID CAR1.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid MEMORY ID CON1.
+
+*************** CALLED ****************
+PARAMETERS: pa_car2 TYPE s_carr_id MEMORY ID CAR1.
+SELECT-OPTIONS: so_con2 FOR gs_sflight-connid MEMORY ID CON1.
+```
+</br>
+</br>
+</br>
+
 ---
 
 </br>
