Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -201,6 +201,10 @@ EXPORTING i_parent = go_cont_r.
 </br>
 
 ## < ABAP 프로그램·트랜잭션 호출 방식 정리 >
+- **ABAP Memory** : 같은 사용자 세션(SAP GUI 창) 안에서만 공유되는 메모리
+- **SAP Memory** : 세션을 넘어 다른 창·트랜잭션에서도 공유 가능한 메모리
+- `SUBMIT / CALL TRANSACTION` → ABAP Memory 사용 가능
+- `LEAVE TO TRANSACTION` → SAP Memory만 사용 가능
 </br>
 
 ### 1) SUBMIT 호출 방식
@@ -374,7 +378,7 @@ SELECT-OPTIONS: so_con2 FOR gs_sflight-connid.
 </br>
 </br>
 
-### 4) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유
+### 4) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유 (ABAP Memory)
 - 프로그램을 이동해도 이전에 입력한 값을 다시 쓰기 위해 ABAP Memory를 사용함
 ```abap
 " ABAP Memory에 값 저장
@@ -412,7 +416,7 @@ IMPORT
 </br>
 </br>
 
-### 5) MEMORY ID를 이용한 조회조건 자동 유지
+### 5) MEMORY ID를 이용한 조회조건 자동 유지 (SAP Memory)
 - 한 번 입력한 조회조건을 SAP이 기억해두었다가, 다음 실행 때 자동으로 다시 채워줌
 ```abap
 PARAMETERS: <PARAM> TYPE <TYPE> MEMORY ID '<MEM_ID>'.
