--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -1,7 +1,13 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) ㅁ**
+- **1) Docking Container 기반 ALV 화면 구성**
+- **2) Splitter Container 기반 다중 ALV 구성**
+- **3) SUBMIT 호출 방식**
+- **4) 트랜잭션 호출 방식**
+- **5) 프로그램 간 데이터 전달 (`SUBMIN ~ WITH`)**
+- **6) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유 (ABAP Memory)**
+- **7) MEMORY ID를 이용한 조회조건 자동 유지 (SAP Memory)**
 </br>
 
 - **C01에서 더블클릭 이벤트 발생해도 자동으로 PAI/PBO 안 탐**
