Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -138,6 +138,14 @@ DATA: <DOCKING_CONTAINER>  TYPE REF TO cl_gui_docking_container,
       <ALV_LEFT>           TYPE REF TO cl_gui_alv_grid,
       <ALV_RIGHT>          TYPE REF TO cl_gui_alv_grid.
 
+*************** Docking Container ****************
+CREATE OBJECT go_dock
+      EXPORTING
+        repid                       = sy-repid
+        dynnr                       = sy-dynnr
+        side                        = cl_gui_docking_container=>dock_at_bottom
+        extension                   = 300.
+
 *************** Splitter Container ****************
 CREATE OBJECT <SPLITTER_CONTAINER>
   EXPORTING
