Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -139,12 +139,12 @@ DATA: <DOCKING_CONTAINER>  TYPE REF TO cl_gui_docking_container,
       <ALV_RIGHT>          TYPE REF TO cl_gui_alv_grid.
 
 *************** Docking Container ****************
-CREATE OBJECT go_dock
-      EXPORTING
-        repid                       = sy-repid
-        dynnr                       = sy-dynnr
-        side                        = cl_gui_docking_container=>dock_at_bottom
-        extension                   = 300.
+CREATE OBJECT <DOCKING_CONTAINER>
+    EXPORTING
+      side      = <DOCK_POSITION>
+      extension = <SIZE>
+      repid     = <PROGRAM_ID>
+      dynnr     = <SCREEN_NO>.
 
 *************** Splitter Container ****************
 CREATE OBJECT <SPLITTER_CONTAINER>
@@ -183,6 +183,14 @@ DATA: go_docking TYPE REF TO cl_gui_docking_container,
       go_cont_r   TYPE REF TO cl_gui_container,
       go_alv_l    TYPE REF TO cl_gui_alv_grid,
       go_alv_r    TYPE REF TO cl_gui_alv_grid.
+
+*************** Docking Container ****************
+CREATE OBJECT go_dock
+      EXPORTING
+        repid                       = sy-repid
+        dynnr                       = sy-dynnr
+        side                        = cl_gui_docking_container=>dock_at_bottom
+        extension                   = 300.
 
 *************** Splitter Container ****************
 CREATE OBJECT go_splitter            " Container 영역 분할 (1행 2열로)
