Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -402,6 +402,7 @@ SELECT-OPTIONS: so_con2 FOR gs_sflight-connid.
 
 ### 4) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유 (ABAP Memory)
 - 프로그램을 이동해도 이전에 입력한 값을 다시 쓰기 위해 ABAP Memory를 사용함
+- `LEAVE TO TRANSACTION` 은 세션을 종료하므로 ABAP Memory(EXPORT/IMPORT)는 사용 불가
 ```abap
 " ABAP Memory에 값 저장
 EXPORT
