--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -5,7 +5,7 @@
 - **2) Splitter Container 기반 다중 ALV 구성**
 - **3) SUBMIT 호출 방식**
 - **4) 트랜잭션 호출 방식**
-- **5) 프로그램 간 데이터 전달 (`SUBMIN ~ WITH`)**
+- **5) 프로그램 간 데이터 전달 (`SUBMIT ~ WITH`)**
 - **6) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유 (ABAP Memory)**
 - **7) MEMORY ID를 이용한 조회조건 자동 유지 (SAP Memory)**
 </br>
