Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -225,8 +225,10 @@ EXPORTING i_parent = go_cont_r.
 ## < ABAP 프로그램·트랜잭션 호출 방식 정리 >
 - **ABAP Memory** : 같은 사용자 세션(SAP GUI 창) 안에서만 공유되는 메모리
 - **SAP Memory** : 세션을 넘어 다른 창·트랜잭션에서도 공유 가능한 메모리
-- `SUBMIT / CALL TRANSACTION` → ABAP Memory 사용 가능
-- `LEAVE TO TRANSACTION` → SAP Memory만 사용 가능
+- **`SUBMIT / CALL TRANSACTION`** → ABAP Memory 사용 가능
+- **`LEAVE TO TRANSACTION`** → SAP Memory만 사용 가능
+- 서로 다른 External Session(SAP GUI 창) 간에는 ABAP Memory 공유 불가 → 데이터 전달이 필요한 경우 SAP Memory 사용
+- SAP Memory는 사용자 로그아웃 시 초기화됨
 </br>
 
 ### 1) SUBMIT 호출 방식
