Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -311,7 +311,8 @@ ENDIF.
 
 ### 2) 트랜잭션 호출 방식
 - 현재 프로그램 종료 후 트랜잭션으로 이동 (복귀 ❌)
-- 지금 프로그램을 완전히 종료하고 이동 → 메모리 다 초기화됨(SAP Memory만 가능)
+- 내부 세션이 종료되어 ABAP Memory는 리셋됨
+- 새로운 세션으로 트랜잭션이 시작되며 SAP Memory만 유지됨
 ```abap
 LEAVE TO TRANSACTION 'T_CODE'
 ```
