Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -406,6 +406,8 @@ SELECT-OPTIONS: so_con2 FOR gs_sflight-connid.
 ### 4) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유 (ABAP Memory)
 - 프로그램을 이동해도 이전에 입력한 값을 다시 쓰기 위해 ABAP Memory를 사용함
 - `LEAVE TO TRANSACTION` 은 세션을 종료하므로 ABAP Memory(EXPORT/IMPORT)는 사용 불가
+- `CALL` 프로그램에서 저장한 값을 같은 창에서 `CALLED` 프로그램을 실행하면 정상적으로 가져옴
+- 새 창(New Session)에서 `CALLED` 프로그램을 실행하면 ABAP Memory를 못 가져와 `No data` 발생
 ```abap
 " ABAP Memory에 값 저장
 EXPORT
@@ -418,11 +420,16 @@ IMPORT
   <MEM_PARM> TO <CALLED_PARM>
   <MEM_SO>   TO <CALLED_SO>
   FROM MEMORY ID '<MEMORY_ID>'.
+
+" ABAP Memory 초기화
+FREE MEMORY ID '<MEMORY_ID>'.
 ```
 ```abap
 *************** CALL ****************
 PARAMETERS: pa_car TYPE s_carr_id.
 SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+FREE MEMORY ID 'CARCON'.
 
 EXPORT
   p1 FROM pa_car
@@ -437,6 +444,8 @@ IMPORT
   p1 TO pa_car2
   s1 TO so_con2
   FROM MEMORY ID 'CARCON'.
+
+FREE MEMORY ID 'CARCON'.
 ```
 </br>
 </br>
@@ -447,11 +456,16 @@ IMPORT
 ```abap
 PARAMETERS: <PARAM> TYPE <TYPE> MEMORY ID '<MEM_ID>'.
 SELECT-OPTIONS: <SO> FOR <FIELD> MEMORY ID '<MEM_ID>'.
+
+" SAP Memory 초기화
+SET PARAMETER ID '<MEM_ID>' FIELD SPACE.
 ```
 ```abap
 *************** CALL ****************
 PARAMETERS: pa_car TYPE s_carr_id MEMORY ID CAR1.
 SELECT-OPTIONS: so_con FOR gs_sflight-connid MEMORY ID CON1.
+
+SET PARAMETER ID 'CAR1' FIELD SPACE. " SAP Memory 초기화
 
 *************** CALLED ****************
 PARAMETERS: pa_car2 TYPE s_carr_id MEMORY ID CAR1.
