Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -1,1 +1,31 @@
+## <  핵심 개념 >
+</br>
 
+- **1) Docking Container 기반 ALV 화면 구성**
+</br>
+
+- **C01에서 더블클릭 이벤트 발생해도 자동으로 PAI/PBO 안 탐**
+- **더블클릭 이후 로직은 기본적으로 C01에서만 처리**
+</br>
+</br>
+
+---
+
+</br>
+
+## < BDC (Batch Data Creation) >
+- 실제 트랜잭션 화면 입력 과정을 BDCDATA에 기록해 프로그램으로 자동 실행하는 방식
+</br>
+
+```pgsql
+BDCDATA 채움
+   ↓
+CALL TRANSACTION 'T_CODE'
+   USING gt_bdc
+   ↓
+Dynpro 1 → Dynpro 2 → …
+   ↓
+SAVE / ENTER / F15 등 OKCODE 실행
+   ↓
+LEAVE PROGRAM
+```
