--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -17,15 +17,5 @@
 - 실제 트랜잭션 화면 입력 과정을 BDCDATA에 기록해 프로그램으로 자동 실행하는 방식
 </br>
 
-```
-BDCDATA 채움
-   ↓
-CALL TRANSACTION 'T_CODE'
-   USING gt_bdc
-   ↓
-Dynpro 1 → Dynpro 2 → …
-   ↓
-SAVE / ENTER / F15 등 OKCODE 실행
-   ↓
-LEAVE PROGRAM
-```
+<img width="481" height="248" alt="image" src="https://github.com/user-attachments/assets/e91fbc27-5228-4e41-9ef6-1ca6f0c34e29" />
+
