Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -19,5 +19,10 @@
 
 <img width="498" height="258" alt="image" src="https://github.com/user-attachments/assets/70fb2045-a16b-4189-a43b-6dc7289f1fb0" />
 </br>
+</br>
 
 <img width="441" height="413" alt="image" src="https://github.com/user-attachments/assets/2f12a82d-cd6e-4f78-804f-6c51306bbd57" />
+</br>
+</br>
+
+<img width="518" height="416" alt="image" src="https://github.com/user-attachments/assets/78904d89-4342-4bca-a53b-73f6b6bee1a0" />
