Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -26,3 +26,8 @@
 </br>
 
 <img width="471" height="379" alt="image" src="https://github.com/user-attachments/assets/25131805-f01f-4c9f-a0d4-f34736a3188c" />
+</br>
+</br>
+
+- 만든 레코드 확인 가능
+<img width="501" height="150" alt="image" src="https://github.com/user-attachments/assets/b56b127f-f634-4c8b-833d-1325e1f61d4d" />
