Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -22,6 +22,7 @@
 </br>
 </br>
 
+- new recording 누르고 start recoding 클릭
 <img width="441" height="413" alt="image" src="https://github.com/user-attachments/assets/2f12a82d-cd6e-4f78-804f-6c51306bbd57" />
 </br>
 </br>
