Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -451,7 +451,7 @@ FREE MEMORY ID 'CARCON'.
 </br>
 </br>
 
-### 5) MEMORY ID를 이용한 조회조건 자동 유지 (SAP Memory)
+### 5) MEMORY ID를 이용한 조회조건 자동 유지 (SAP Memory, SET / GET PARAMETER ID)
 - 한 번 입력한 조회조건을 SAP이 기억해두었다가, 다음 실행 때 자동으로 다시 채워줌
 ```abap
 PARAMETERS: <PARAM> TYPE <TYPE> MEMORY ID '<MEM_ID>'.
@@ -470,6 +470,23 @@ SET PARAMETER ID 'CAR1' FIELD SPACE. " SAP Memory 초기화
 *************** CALLED ****************
 PARAMETERS: pa_car2 TYPE s_carr_id MEMORY ID CAR1.
 SELECT-OPTIONS: so_con2 FOR gs_sflight-connid MEMORY ID CON1.
+```
+- SAP Memory에 값을 저장하고 같은 세션의 다른 프로그램·화면에서 그 값을 자동으로 전달·조회하는 기능
+```abap
+*************** SET ****************
+SET PARAMETER ID '<MEM_ID>' FIELD <FIELD>.
+
+*************** GET ****************
+GET PARAMETER ID '<MEM_ID>' FIELD <FIELD>.
+```
+```abap
+*************** SET ****************
+SET PARAMETER ID 'CAR1' FIELD pa_car.     
+SET PARAMETER ID 'CON1' FIELD pa_conn.   
+
+*************** GET ****************
+GET PARAMETER ID 'CAR1' FIELD pa_car2.    
+GET PARAMETER ID 'CON1' FIELD pa_conn2.   
 ```
 </br>
 </br>
