Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -16,7 +16,81 @@
 ## < BDC (Batch Data Creation) >
 - 실제 트랜잭션 화면 입력 과정을 BDCDATA에 기록해 프로그램으로 자동 실행하는 방식
 </br>
+```abap
+*************** BDC Dynpro 시작 ****************
+PERFORM set_bdcdata USING 'X' <PROGRAM> <SCREEN>.
+* <PROGRAM> : Dynpro 프로그램명
+* <SCREEN>  : Dynpro 번호
 
+
+*************** BDC 화면 필드 입력 ****************
+PERFORM set_bdcdata USING ' ' <FIELDNAME> <VALUE>.
+* <FIELDNAME> : 화면 필드명 (예: BDC_OKCODE, PA_CAR2)
+* <VALUE>     : 입력값
+
+
+*************** BDC DATA 공통 FORM ****************
+FORM set_bdcdata USING pv_dynbegin   " Dynpro 시작 여부 ('X' / ' ')
+                       pv_fname      " 프로그램명 or 필드명
+                       pv_fval.      " 화면번호 or 입력값
+
+  CLEAR gs_bdcdata.
+  IF pv_dynbegin EQ abap_true.        " Dynpro 시작
+    gs_bdcdata-dynbegin = abap_true.
+    gs_bdcdata-program  = pv_fname.
+    gs_bdcdata-dynpro   = pv_fval.
+  ELSE.                              " 화면 필드 입력
+    gs_bdcdata-fnam = pv_fname.
+    gs_bdcdata-fval = pv_fval.
+  ENDIF.
+  APPEND gs_bdcdata TO gt_bdcdata.    " BDCDATA 한 줄 적재
+ENDFORM.
+```
+```abap
+*************** BDC DATA 선언부 ****************
+DATA: gs_bdcdata      TYPE bdcdata,             " BDCDATA 단건 구조
+      gt_bdcdata      TYPE STANDARD TABLE OF bdcdata,
+      lt_bdc_message  TYPE STANDARD TABLE OF bdcmsgcoll.
+
+
+*************** BDC DATA 적재 (CALL 쪽) ****************
+PERFORM set_bdcdata USING:
+* STARTID   PROGRAM / FIELDNAME    SCREEN / VALUE
+  'X'       'ZPROGB03_CALLED'      '1000',      " Dynpro 시작
+  ' '       'BDC_CURSOR'           'SO_CON2-HIGH',
+  ' '       'BDC_OKCODE'           '=ONLI',
+  ' '       'PA_CAR2'              'AA',
+  ' '       'SO_CON2-LOW'          '17',
+  ' '       'SO_CON2-HIGH'         '64',
+  'X'       'SAPMSSY0'              '0120',     " 팝업 Dynpro
+  ' '       'BDC_OKCODE'           '=BACK',
+  'X'       'ZPROGB03_CALLED'      '1000',      " 원화면
+  ' '       'BDC_OKCODE'           '/EE',
+  ' '       'BDC_CURSOR'           'PA_CAR2'.
+
+*************** BDC CALL TRANSACTION ****************
+CALL TRANSACTION 'ZTCODEB03_CALLED'
+  USING gt_bdcdata
+  MODE 'A'
+  UPDATE 'S'
+  MESSAGES INTO lt_bdc_message.
+
+*************** BDC DATA 함수 ****************
+FORM set_bdcdata  USING    pv_dynbegin
+                           pv_fname
+                           pv_fval.
+  CLEAR gs_bdcdata.
+  IF pv_dynbegin EQ abap_true. " pv_dynbegin = 'X'
+    gs_bdcdata-dynbegin = abap_true.
+    gs_bdcdata-program = pv_fname.
+    gs_bdcdata-dynpro = pv_fval.
+  ELSE.
+    gs_bdcdata-fnam = pv_fname.
+    gs_bdcdata-fval = pv_fval.
+  ENDIF.
+  APPEND gs_bdcdata TO gt_bdcdata.
+ENDFORM.
+```
 - system -> services -> batch input -> recorder 클릭
 <img width="498" height="258" alt="image" src="https://github.com/user-attachments/assets/70fb2045-a16b-4189-a43b-6dc7289f1fb0" />
 </br>
