Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -17,7 +17,7 @@
 - 실제 트랜잭션 화면 입력 과정을 BDCDATA에 기록해 프로그램으로 자동 실행하는 방식
 </br>
 
-## CALL TRANSACTION - MODE 옵션
+### CALL TRANSACTION - MODE 옵션
 
 | MODE | 설명 |
 |------|------|
@@ -26,7 +26,7 @@
 | N | 화면 없이 백그라운드 처리 |
 | P | 오류 발생 시 화면 일시정지 |
 
-## CALL TRANSACTION - UPDATE 옵션
+### CALL TRANSACTION - UPDATE 옵션
 
 | UPDATE | 설명 |
 |--------|------|
