Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -17,7 +17,7 @@
 - 실제 트랜잭션 화면 입력 과정을 BDCDATA에 기록해 프로그램으로 자동 실행하는 방식
 </br>
 
-### CALL TRANSACTION - MODE 옵션
+**< CALL TRANSACTION - MODE 옵션 >**
 
 | MODE | 설명 |
 |------|------|
@@ -26,13 +26,14 @@
 | N | 화면 없이 백그라운드 처리 |
 | P | 오류 발생 시 화면 일시정지 |
 
-### CALL TRANSACTION - UPDATE 옵션
+**< CALL TRANSACTION - UPDATE 옵션 >**
 
 | UPDATE | 설명 |
 |--------|------|
 | S | 동기 처리 (작업 완료 후 프로그램 복귀) |
 | A | 비동기 처리 (즉시 복귀, 작업은 백그라운드 진행) |
 
+</br>
 
 ```abap
 *************** BDC Dynpro 시작 ****************
