--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -22,7 +22,7 @@
 | MODE | 설명 |
 |------|------|
 | A | 모든 화면 표시 / 진행 중 수정 가능 |
-| E | 오류 화면만 표시 |
+| E | 정상 흐름은 숨기고 오류 화면만 표시 |
 | N | 화면 없이 백그라운드 처리 (사용자는 못 봄) |
 | P | 오류 발생 시 화면 일시정지 |
 
