Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -1,7 +1,7 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) Docking Container 기반 ALV 화면 구성**
+- **1) BDC (Batch Data Creation)**
 </br>
 
 - **C01에서 더블클릭 이벤트 발생해도 자동으로 PAI/PBO 안 탐**
@@ -129,3 +129,16 @@ ENDFORM.
 
 - 만든 레코드 확인 가능
 <img width="501" height="150" alt="image" src="https://github.com/user-attachments/assets/b56b127f-f634-4c8b-833d-1325e1f61d4d" />
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < SAP Job(백그라운드 잡) >
+- Job = 사람이 안 눌러도 정해진 조건/시간에 ABAP 프로그램을 자동 실행하는 작업
+- **SM36** → 잡(Job) 생성
+- **SM37** → 생성된 잡(Job) 조회 / 상태 확인
