Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -2,6 +2,7 @@
 </br>
 
 - **1) BDC (Batch Data Creation)**
+- **2) SAP Job(백그라운드 잡) - SM36, SM37**
 </br>
 
 - **C01에서 더블클릭 이벤트 발생해도 자동으로 PAI/PBO 안 탐**
@@ -138,7 +139,7 @@ ENDFORM.
 
 </br>
 
-## < SAP Job(백그라운드 잡) >
+## < SAP Job(백그라운드 잡) - SM36, SM37 >
 - Job = 사람이 안 눌러도 정해진 조건/시간에 ABAP 프로그램을 자동 실행하는 작업
 - **SM36** → 잡(Job) 생성
 - **SM37** → 생성된 잡(Job) 조회 / 상태 확인
