Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -14,7 +14,10 @@
 
 </br>
 
-## < BDC (Batch Data Creation) >
+## < SAP 자동 실행 처리 기법 >
+</br>
+
+### 1) BDC (Batch Data Creation)
 - 실제 트랜잭션 화면 입력 과정을 BDCDATA에 기록해 프로그램으로 자동 실행하는 방식
 </br>
 
@@ -135,11 +138,7 @@ ENDFORM.
 </br>
 </br>
 
----
-
-</br>
-
-## < SAP Job(백그라운드 잡) - SM36, SM37 >
+### 2) SAP Job(백그라운드 잡) - SM36, SM37
 - Job = 사람이 안 눌러도 정해진 조건/시간에 ABAP 프로그램을 자동 실행하는 작업
 - **SM36** → 잡(Job) 생성
 - **SM37** → 생성된 잡(Job) 조회 / 상태 확인
