Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -143,3 +143,8 @@ ENDFORM.
 - Job = 사람이 안 눌러도 정해진 조건/시간에 ABAP 프로그램을 자동 실행하는 작업
 - **SM36** → 잡(Job) 생성
 - **SM37** → 생성된 잡(Job) 조회 / 상태 확인
+</br>
+
+- 백그라운드 잡에서는 ALV 사용 불가 (화면 인스턴스 생성 불가)
+- 시스템 변수 `sy-batch = 'X'` → 현재 백그라운드 실행 중
+- 이 경우 ALV 대신 WRITE, 스풀, 파일 출력 등으로 처리
