Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -154,34 +154,6 @@ REPORT ZPROGB03_0032.
 DATA: gt_data TYPE TABLE OF ZDBWORK_B03,
       gs_data LIKE LINE OF gt_data.
 
-*SELECT * FROM ZDBWORK_B03
-*  INTO TABLE gt_data
-*  ORDER BY WORKNO DESCENDING." 내림차순
-*
-*CHECK sy-subrc = 0.
-
-*READ TABLE gt_DATA INTO GS_DATA INDEX 1.
-*ADD 1 TO gs_data-workno.
-gs_data-workno = 1.
-gs_data-workdesc = 'hello work~~'.
-gs_data-ernam = sy-uname. " 유저이름
-gs_data-erdat = sy-datum. " 현재 일자
-gs_data-erzet = sy-uzeit. " 현재 시간
-
-INSERT ZDBWORK_B02 FROM gs_data.
-IF sy-subrc = 0.
-  SELECT * FROM ZDBWORK_B03
-    INTO TABLE gt_data
-    ORDER BY workno DESCENDING.
-  cl_demo_output=>display( gt_data ).
-ENDIF.
-```
-```abap
-REPORT ZPROGB03_0032.
-
-DATA: gt_data TYPE TABLE OF ZDBWORK_B03,
-      gs_data LIKE LINE OF gt_data.
-
 SELECT * FROM ZDBWORK_B03
   INTO TABLE gt_data
   ORDER BY WORKNO DESCENDING." 내림차순
@@ -191,6 +163,13 @@ CHECK sy-subrc = 0.
 READ TABLE gt_DATA INTO GS_DATA INDEX 1.
 ADD 1 TO gs_data-workno.
 
+********** 기존에 있는 데이터 **********
+gs_data-workno = 1.
+gs_data-workdesc = 'hello work~~'.
+gs_data-ernam = sy-uname. " 유저이름
+gs_data-erdat = sy-datum. " 현재 일자
+gs_data-erzet = sy-uzeit. " 현재 시간
+***************************************
 gs_data-workdesc = 'hello work~~'.
 gs_data-ernam = sy-uname. " 유저이름
 gs_data-erdat = sy-datum. " 현재 일자
