Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -163,7 +163,7 @@ CHECK sy-subrc = 0.
 READ TABLE gt_DATA INTO GS_DATA INDEX 1.
 ADD 1 TO gs_data-workno.
 
-********** 기존에 있는 데이터 **********
+*********** 처음 넣은 데이터 ***********
 gs_data-workno = 1.
 gs_data-workdesc = 'hello work~~'.
 gs_data-ernam = sy-uname. " 유저이름
