Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -187,3 +187,7 @@ IF sy-subrc = 0.
   cl_demo_output=>display( gt_data ).
 ENDIF.
 ```
+</br>
+</br>
+
+<img width="393" height="244" alt="image" src="https://github.com/user-attachments/assets/22bbdbb8-6185-4a1d-8457-8b3daba9f95c" />
