Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -190,4 +190,5 @@ ENDIF.
 </br>
 </br>
 
-<img width="393" height="244" alt="image" src="https://github.com/user-attachments/assets/22bbdbb8-6185-4a1d-8457-8b3daba9f95c" />
+- `SM36` 로 JOB 생성하기
+<img width="425" height="264" alt="image" src="https://github.com/user-attachments/assets/84b88305-b4e2-41c0-8750-f3ea01f3b74b" />
