Update 3-1. 프로그래밍 전용 리포트 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 리포트 개발(01.06).md
@@ -191,4 +191,10 @@ ENDIF.
 </br>
 
 - `SM36` 로 JOB 생성하기
-<img width="425" height="264" alt="image" src="https://github.com/user-attachments/assets/84b88305-b4e2-41c0-8750-f3ea01f3b74b" />
+- 프로그램 이름 지정
+<img width="448" height="279" alt="image" src="https://github.com/user-attachments/assets/b2b681d2-7fc4-4bf3-bc4f-9779b6f4eea4" />
+</br>
+</br>
+
+- JOB 시작 조건을 주기적 실행으로 설정해 20분마다 백그라운드 JOB을 자동 실행하도록 설정
+<img width="459" height="369" alt="image" src="https://github.com/user-attachments/assets/da67cc6f-53a4-4032-9a56-7644a4695deb" />
